--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ env:
   AZURE_RESOURCE_GROUP: 'rg-nextflow-runner'
 
 jobs:
-  build:
-    name: Build - NextflowRunnerAPI & SQL
+  buildAPI:
+    name: Build - NextflowRunnerAPI
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -32,9 +32,6 @@ jobs:
     - name: Build API
       run: dotnet build ./NextflowRunnerAPI --configuration Release
 
-    - name: Build DACPAC
-      run: dotnet build ./NextflowRunnerDB/NextflowRunnerDB.sqlproj --configuration Release /p:NetCoreBuild=true /p:NETCoreTargetsPath=${{ github.workspace }}/NextflowRunnerDB/BuildDirectory
-
     - name: create API artifact
       run: dotnet publish ./NextflowRunnerAPI -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
@@ -43,6 +40,21 @@ jobs:
       with:
         name: .net-app
         path: ${{env.DOTNET_ROOT}}/myapp
+   
+  buildSQL:
+    name: Build - NextflowRunnerDB
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.301'
+        include-prerelease: true
+
+    - name: Build DACPAC
+      run: dotnet build ./NextflowRunnerDB/NextflowRunnerDB.sqlproj --configuration Release /p:NetCoreBuild=true /p:NETCoreTargetsPath=${{ github.workspace }}/NextflowRunnerDB/BuildDirectory
 
     - name: Upload DB artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -82,7 +94,7 @@ jobs:
   deploy_database:
     name: Deploy DACPAC
     runs-on: windows-latest
-    needs: [build, provision]
+    needs: [buildAPI, buildSQL, provision]
     environment:
       name: 'production'    
 
@@ -110,7 +122,7 @@ jobs:
   deploy_webapp:
     name: Deploy NextflowRunnerAPI
     runs-on: ubuntu-latest
-    needs: [build, provision]
+    needs: [buildAPI, buildSQL, provision]
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
