Add sql connection

--- a/NextflowRunnerAPI/appsettings.json
+++ b/NextflowRunnerAPI/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "SshClient": {
     "Host": "",
     "Username": "",
