Update SSH connection

--- a/NextflowRunnerAPI/appsettings.json
+++ b/NextflowRunnerAPI/appsettings.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "SshClient": {
-    "Host": "",
-    "Username": "",
-    "Password": ""
+  "SSHConnection": {
+    "VM_ADMIN_USERNAME": "",
+    "VM_ADMIN_PASSWORD": "",
+    "VM_ADMIN_HOSTNAME": ""
   }
 }
