--- a/NextflowRunnerAPI/appsettings.json
+++ b/NextflowRunnerAPI/appsettings.json
@@ -10,8 +10,8 @@
     "DefaultConnection": ""
   },
   "SSHConnection": {
+    "VM_ADMIN_HOSTNAME": "",
     "VM_ADMIN_USERNAME": "",
-    "VM_ADMIN_PASSWORD": "",
-    "VM_ADMIN_HOSTNAME": ""
+    "VM_ADMIN_PASSWORD": ""
   }
 }
