--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build:
-    name: Build - NextflowRunnerAPI
+    name: Build - NextflowRunner.API
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -30,13 +30,13 @@ jobs:
         include-prerelease: true
 
     - name: Build API
-      run: dotnet build ./NextflowRunnerAPI --configuration Release
+      run: dotnet build ./NextflowRunner.API --configuration Release
 
     - name: Build DACPAC
       run: dotnet build ./NextflowRunnerDB.Build --configuration Release
 
     - name: create API artifact
-      run: dotnet publish ./NextflowRunnerAPI -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish ./NextflowRunner.API -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Upload API artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -108,7 +108,7 @@ jobs:
         az logout
 
   deploy_webapp:
-    name: Deploy NextflowRunnerAPI
+    name: Deploy NextflowRunner.API
     runs-on: ubuntu-latest
     needs: [build, provision]
     environment:
