--- a/NextflowRunner.API/appsettings.json
+++ b/NextflowRunner.API/appsettings.json
@@ -12,6 +12,7 @@
   "SSHConnection": {
     "VM_ADMIN_HOSTNAME": "",
     "VM_ADMIN_USERNAME": "",
-    "VM_ADMIN_PASSWORD": ""
+    "VM_ADMIN_PASSWORD": "",
+    "WEBLOG_URL": ""
   }
 }
