--- a/NextflowRunner.API/NextflowRunner.API.csproj
+++ b/NextflowRunner.API/NextflowRunner.API.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NextflowRunner.Models\NextflowRunner.Models.csproj" />
+  </ItemGroup>
+
 </Project>
