--- a/NextflowRunnerClient/NextflowRunnerClient.csproj
+++ b/NextflowRunnerClient/NextflowRunnerClient.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
+		<PackageReference Include="Meziantou.Framework.ByteSize" Version="1.3.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="3.0.0">
