--- a/NextflowRunnerClient/NextflowRunnerClient.csproj
+++ b/NextflowRunnerClient/NextflowRunnerClient.csproj
@@ -6,13 +6,6 @@
 	<ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <OpenApiReference Include="OpenAPIs\swagger.json" Namespace="NextflowRunnerClient.Services" ClassName="NextflowAPI">
-      <CodeGenerator>NSwagCSharp</CodeGenerator>
-      <SourceUri>https://hli6aqxtwj2yy-nf-runner-api.azurewebsites.net/swagger/v1/swagger.json</SourceUri>
-    </OpenApiReference>
-  </ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
 		<PackageReference Include="Meziantou.Framework.ByteSize" Version="1.3.3" />
@@ -27,6 +20,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <OpenApiReference Include="OpenAPIs\swagger.json" CodeGenerator="NSwagCSharp" Namespace="NextflowRunnerClient.Services" ClassName="NextflowAPI">
+	    <SourceUri>https://hli6aqxtwj2yy-nf-runner-api.azurewebsites.net/swagger/v1/swagger.json</SourceUri>
+	  </OpenApiReference>
 	</ItemGroup>
 
 
