added azure container settings

--- a/NextflowRunner.API/appsettings.json
+++ b/NextflowRunner.API/appsettings.json
@@ -14,5 +14,11 @@
     "VM_ADMIN_USERNAME": "",
     "VM_ADMIN_PASSWORD": "",
     "WEBLOG_URL": ""
+  },
+  "AzureStorage": {
+
+    "AZURE_STORAGE_SAS": "",
+    "AZURE_STORAGE_ACCOUNTNAME": "",
+    "AZURE_STORAGE_KEY": ""
   }
 }
