--- a/NextflowRunner.Serverless/NextflowRunner.Serverless.csproj
+++ b/NextflowRunner.Serverless/NextflowRunner.Serverless.csproj
@@ -5,6 +5,7 @@
 		<UserSecretsId>f36e73e2-b4e8-4c2b-adec-3be1aa7fccbd</UserSecretsId>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Azure.Common" Version="2.2.1" />
 		<PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Azure.Management.ContainerInstance" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.5.1" />
