ignore github folder in PR build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
       - 'docs/**'
       - 'NextflowRunnerClient/**'
       - 'templates/**'
+      - '.github/**'
   workflow_dispatch:
 
 jobs:
