--- a/NextflowRunnerClient/wwwroot/appsettings.json
+++ b/NextflowRunnerClient/wwwroot/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "NextflowRunnerAPI": "https://hli6aqxtwj2yy-nf-runner-api.azurewebsites.net/"
+  "NextflowRunnerAPI": "https://nfr-hli6aqxtwj2yy-api.azurewebsites.net/"
 }
